# duckdb-3fs

./: .gitmodules  CMakeLists.txt  Makefile  README.md  README_TESTING.md  build_3fs.sh  extension_config.cmake  prepare_test_dirs.sh
src/: threefs.cpp  threefs_extension.cpp
src/include/: threefs.hpp
test/: check_3fs_mount.sh
test/sql/: localfs_io.test  threefs.test  threefs_basic.test  threefs_concurrency.test  threefs_errors.test  threefs_integration.test  threefs_io.test  threefs_performance.test
